fixed mobile font spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,13 @@ html {
 	min-height: 100%;
 }
 
+.jumbo-text{
+	color: white; 
+	position: relative; 
+	top: 30%; 
+	text-shadow: 2px 2px #624E78;
+}
+
 script-text {
 	font-family: 'Lora', serif;
 	color: #624E78;
@@ -126,6 +133,10 @@ a:visited {
 @media only screen and (max-width: 500px) {
 	.jumbotron-hero {
 		height: 250px;
+	}
+
+	.jumbo-text{
+		top: 15%; 
 	}
 
 	.box {
